Fix spacing on show view between 'approved' label and user dropdown

--- a/app/assets/stylesheets/suggestions.scss
+++ b/app/assets/stylesheets/suggestions.scss
@@ -10,3 +10,6 @@ a.tb-link {
 .label {
   padding: 1rem;
 }
+.spaced {
+  margin-top: 10rem;
+}
